fix: reducing size of h5, fixing wp-bar z-index, removing strong font size increase

--- a/content/themes/ea/src/scss/utilities/_mixins.scss
+++ b/content/themes/ea/src/scss/utilities/_mixins.scss
@@ -223,8 +223,8 @@
 }
 
 @mixin font_heading-5 {
-  font-size: 25px;
-  line-height: 28px;
+  font-size: 22px;
+  line-height: 24px;
 }
 
 @mixin font_heading-6 {
