--- a/content/themes/ea/src/scss/utilities/_override.scss
+++ b/content/themes/ea/src/scss/utilities/_override.scss
@@ -1,7 +1,7 @@
 // WordPress Admin Bar
 
 #wpadminbar {
-  z-index: 4 !important;
+  z-index: 6 !important;
 }
 
 // WPML Language Switcher
